force-app/main/default/objects/Usuario_de_Campana__c/Usuario_de_Campana__c.object-meta.xml
<CustomObject>
    <description>Objeto en el que se definen los usuarios objetivo de una campaña. Principalmente destinado a Account Managers</description>
    <label>Usuario de Campaña</label>
    <nameField>
        <displayFormat>CU-{00000}</displayFormat>
        <label>Número de Usuario de Campaña</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usuarios de Campaña</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>