force-app/main/default/objects/Usuario_de_Campana__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <formula>OR(Campana__r.IsActive, Ispickval(Campana__r.Status,&apos;Activa&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>