force-app/main/default/objects/Usuario_de_Campana__c/fields/Campana__c.field-meta.xml
<CustomField>
    <fullName>Campana__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Usuarios de Campaña</relationshipLabel>
    <relationshipName>Usuarios_de_Campana</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>