force-app/main/default/objects/Usuario_de_Campana__c/fields/Mercado__c.field-meta.xml
<CustomField>
    <fullName>Mercado__c</fullName>
    <label>Mercado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>