force-app/main/default/objects/Usuario_de_Campana__c/fields/Mis_campanas__c.field-meta.xml
<CustomField>
    <fullName>Mis_campanas__c</fullName>
    <formula>Usuario__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mis Campañas</label>
    <type>Checkbox</type>
</CustomField>