force-app/main/default/objects/Usuario_de_Campana__c/fields/Solucione__c.field-meta.xml
<CustomField>
    <fullName>Solucione__c</fullName>
    <label>Solucion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>