force-app/main/default/objects/Usuario_de_Campana__c/fields/Tecnolog_a__c.field-meta.xml
<CustomField>
    <fullName>Tecnolog_a__c</fullName>
    <label>Tecnología</label>
    <length>255</length>
    <type>Text</type>
</CustomField>