force-app/main/default/objects/Usuario_de_Campana__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Usuarios_de_Campana_del</relationshipName>
    <type>Lookup</type>
</CustomField>