force-app/main/default/objects/Usuario_de_Campana__c/validationRules/Usuario_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Usuario_obligatorio</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Usuario__c)</errorConditionFormula>
    <errorDisplayField>Campana__c</errorDisplayField>
    <errorMessage>El campo de usuario es obligatorio</errorMessage>
</ValidationRule>