force-app/main/default/objects/Usuario_de_Campana__c/listViews/Las_campa_as_en_las_que_formo_parte.listView-meta.xml
<ListView>
    <fullName>Las_campa_as_en_las_que_formo_parte</fullName>
    <columns>Campana__c</columns>
    <columns>Mercado__c</columns>
    <columns>Solucione__c</columns>
    <columns>Tecnolog_a__c</columns>
    <columns>Usuario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mis_campanas__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Activa__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Las campañas en las que formo parte</label>
</ListView>