force-app/main/default/objects/Usuario_de_Campana__c/listViews/Todas_lo_usuarios_de_campa_a.listView-meta.xml
<ListView>
    <fullName>Todas_lo_usuarios_de_campa_a</fullName>
    <columns>Campana__c</columns>
    <columns>Mercado__c</columns>
    <columns>Solucione__c</columns>
    <columns>Tecnolog_a__c</columns>
    <columns>Usuario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Activa__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Todas lo usuarios de campaña</label>
</ListView>